--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div id="inputs"></div>
 
         <!-- buttons -->
-        <div>
+        <div class="allButtons">
             <button id="all">All</button>
             <button id="active">Active</button>
             <button id="complete">Completed</button>
             <button id="outputclear">Clear All</button>
-            <button id="clearcompleted">Clear Complete</button>
+            <button id="clearcompleted">Clear Completed</button>
         </div>
     </div>
     <script src="/todoapp/javascript/working.js"></script>
